# AgenticAI_MCP_GraphQL

./: .env.example  .gitignore  README.md  graphql_client.py  mcp_server.py  pyproject.toml  requirements.txt  schema.graphql
examples/: config.example.json  openai_demo.py  run_demo.py
src/mcp_graphql_bridge/: __init__.py  config.py  graphql_client.py  openai_adapter.py  schema_inspector.py  server.py  tool_generator.py
tests/: __init__.py  test_config.py  test_graphql_client.py  test_schema_inspector.py  test_server.py  test_tool_generator.py
